--- a/Mini_CompilerTests/Mini_CompilerTests.csproj
+++ b/Mini_CompilerTests/Mini_CompilerTests.csproj
@@ -115,6 +115,12 @@
     <Content Include="BadPrograms\duplicateIdentBlock.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="BadPrograms\hexWrong.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="BadPrograms\hexBool.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="BadPrograms\undecalred2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -325,7 +331,16 @@
     <Content Include="BadPrograms\badBrackets.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="GoodPrograms\exampleProgram.txt">
+    <Content Include="GoodPrograms\hex4.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="GoodPrograms\hex3.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="GoodPrograms\hex2.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="GoodPrograms\hex.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="GoodPrograms\arrayDeclaration6d.txt">
