fixed grammar for unary minus

--- a/Mini_CompilerTests/Mini_CompilerTests.csproj
+++ b/Mini_CompilerTests/Mini_CompilerTests.csproj
@@ -397,6 +397,9 @@
     <Content Include="GoodPrograms\break.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="GoodPrograms\unaryMinus.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Manual\scanf.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
