zmiany po latach

--- a/Mini_CompilerTests/Mini_CompilerTests.csproj
+++ b/Mini_CompilerTests/Mini_CompilerTests.csproj
@@ -79,6 +79,18 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="BadPrograms\declatarionError.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="BadPrograms\randomText.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="BadPrograms\pawel.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="BadPrograms\janek.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="BadPrograms\arrayWrongIndexes2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
